--- a/package.json
+++ b/package.json
@@ -4,15 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mdsnraetff/movie_api.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/mdsnraetff/movie_api/issues"
+  },
+  "homepage": "https://github.com/mdsnraetff/movie_api#readme",
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0"
   }
 }
