--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^5.3.4",
     "morgan": "^1.10.0",
+    "parcel": "^2.8.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
