--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "lodash": "^4.17.21",
     "mongoose": "^5.3.4",
     "morgan": "^1.10.0",
-    "parcel": "^2.8.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -39,7 +38,9 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.9.3",
     "eslint": "^8.34.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "parcel": "^2.9.3"
   }
 }
